--- a/ARTZ/templates/userDashboard.html
+++ b/ARTZ/templates/userDashboard.html
@@ -1,4 +1,3 @@
-<title>Online Booking</title>
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -10,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Sign Up</title>
+      <title>Dashboard</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -89,59 +88,55 @@
       </div>
       <!-- header section end -->
       <!-- contact section start -->
-      <div class="contact_section layout_padding margin_90">
+      <div class="">
         {% if messages %}
         {% for message in messages %}
             <h3>{{message}}</h3>
         {% endfor %}
         {% endif %}
-        
-        {% if user.is_authenticated %}
-        <h1 class=""><b>BOOK AN APPOINTMENT</b></h1>
-
-        <div class="">
-            <form method="post" action="{% url 'booking' %}" class="" required>
-                {% csrf_token %}
-
-                <!--input service-->
-                <div>
-                    <h3 class="">Select Service:</h3>
-                    <select class="" name="service">
-                        <option value="Doctor care">Doctor care</option>
-                        <option value="Nursing care">Nursing care</option>
-                        <option value="Medical social services">Medical social services</option>
-                        <option value="Homemaker or basic assistance care">Homemaker or basic assistance care</option>
-                    </select>
-                </div>
-                    <!--input day--><br><br>
-                    <div class="mt-3">
-                        <br>
-                        <h3 class="">Select Day:</h3>
-                        <select class="" name="day">
-                            {% for validateWeekday in validateWeekdays %}
-                            <option value="{{validateWeekday}}">{{validateWeekday}}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-
-                    <br/><br>
-                    <div>
-                        <button type="submit" class="btn btn-primary text-white">Continue</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-
-        {% else %}
-
-        <div class="">
-            <h1 class="">You Are Not Signed in!</h1>
-            <a href="{% url 'register' %}" class="">Sign in</a>
-        </div>
-
-        {% endif %}
-
       </div>
+
+      {% if user.is_authenticated %}
+    <h3 class="banner_taital">Dash<span style="color: #151515;">board</span></h3>
+
+<div class="shadow p-4 mb-5 bg-body bg-body rounded text-black  m-5 ">
+    <h2 class="">Patient Info:</h2>
+    <ul class="list-group fs-4 mt-3">
+            <li class="list-group mt-2">First Name: {{ user.first_name }}</li>
+            <li class="list-group mt-2">Last Name: {{ user.last_name }}</li>
+            <li class="list-group mt-2">Username: {{ user.username }}</li>
+    </ul>
+</div>
+
+<!--Appointment Loop-->
+{% if appointments.count > 0 %}
+<div class="mt-5 ">
+    <h1 class=" ms-5">Appointments:</h1>
+    <div class="shadow p-4 mb-3 bg-body bg-body rounded text-black  m-5">
+        {% for appointment in appointments %}
+        <div class="list-group fs-4 border p-3 mb-3">
+            <p class="list-group mt-2">Day: {{ appointment.day }}</p>
+            <p class="list-group mt-2">Time: {{ appointment.time }}</p>
+            <p class="list-group mt-2">Service: {{ appointment.service }}</p>
+            <div class="mt-3 mb-2">
+                <a class="btn btn-primary rounded-3 p-2" href="{% url 'userUpdate' appointment.id %}">Edit Appointment</a>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+{% endif %}
+
+{% else %}
+
+<div class="shadow p-4 mb-5 bg-body bg-body rounded text-black  m-5">
+    <h1 class="p-2  ms-3">First Sign in!</h1>
+    <a href="{% url 'login' %}" class="btn btn-primary text-white">Sign in</a>
+</div>
+
+{% endif %}
+
+
       <!-- contact section end -->
       <!-- footer section start -->
       <div class="footer_section layout_padding">
